--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                     <img src="Images/rss_icon.png" alt="RSS">
                 </a>
 
-                <a type="application/rss+xml" href="feed/noticias.xml">
+                <a type="application/rss+xml" href="feed/noticiasAtom.atom">
                     <img src="Images/atom_icon.png" alt="Atom">
                 </a>
             </div>
