--- a/index.html
+++ b/index.html
@@ -177,10 +177,13 @@
                 <a type="application/rss+xml" href="feed/noticias.xml">
                     <img src="Images/rss_icon.png" alt="RSS">
                 </a>
+                <a href="http://validator.w3.org/feed/check.cgi?url=https%3A//abiliogz.github.io/Agora/feed/noticias.xml"><img src="Images/valid-rss-rogers.png" alt="[Valid RSS]" title="Validate my RSS feed" /></a>
 
                 <a type="application/rss+xml" href="feed/noticiasAtom.atom">
                     <img src="Images/atom_icon.png" alt="Atom">
                 </a>
+                <a href="http://validator.w3.org/feed/check.cgi?url=https%3A//abiliogz.github.io/Agora/feed/noticiasAtom.atom"><img src="Images/valid-atom.png" alt="[Valid Atom 1.0]" title="Validate my Atom 1.0 feed" /></a>
+
             </div>
         </aside>
        
